css/main.css
body
{
    font-family: 'Catamaran',"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
}

pre, pre code, code, .hljs
{
    font-family: 'Fira Mono',Menlo,Monaco,Consolas,"Courier New",monospace;
    font-size: 14px; /* matches the visual size of the body font better */
    line-height: 1.5;
    background: #f6f6f6;
}

code
{
    border: 1px solid #eee;
    color: #333;
}

pre code
{
    border: none;
}

.container
{
    max-width: 820px;
}

.site-header img
{
    margin: 0 auto 0 auto;
}

.site-header ul
{
    padding: 0;
}

.site-header li
{
    list-style-type: none;
}

.site-header .menu
{
    text-align: center;
}

@media (min-width: 992px)
{
    .site-header .menu
    {
        margin-top: 4em;
    }
}

.site-header .menu li
{
    display: inline;
}

.site-header h2
{
    display: inline;
    font-size: 20px;
    font-weight: 500;
    /* Spacing important for background of active item */
    padding: 0.2em 0.5em ;
    margin: 0.55em 0.25em ;
}

.site-header li.active h2
{
    border-radius: 5px;
    background-color: #eee;
}

.logo-name
{
    font-family: 'Philosopher','Catamaran',"Helvetica Neue",Helvetica,Arial,sans-serif;
}

.pitch
{
    font-size: 25px;
}

.pitch .logo-name
{
    font-weight: 700;
}

.site-footer
{
    margin: 3rem 0 1rem;
    border-top: 2px solid #dedede;
}

.site-footer .legal
{
    text-align: center;
    font-size: 12px;
}

.social-media-list
{
    padding: 0;
    text-align: right;
}

.social-media-list li
{
    display: inline;
    list-style-type: none;
    font-size: 18px;
    margin-left: 1ex;
}

